--- a/informationHandling/pom.xml
+++ b/informationHandling/pom.xml
@@ -24,6 +24,18 @@
       <artifactId>testng</artifactId>
       <version>7.4.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.14.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.14.1</version>
+    </dependency>
   </dependencies>
 
   <build>
